tests/pass/extend-absolute-mod.mle
eff gen = yield : int => int

val id : []([](int -> int) -> [gen](int -> int))
let id f = f
