tests/fail/pure-id-fun.mle
val id : forall [a] . [](a -> a)

let f = id (fun x -> 1)
